linkerd-and-windows/client.yml
apiVersion: v1
kind: Pod
metadata:
  name: client
  namespace: win-demo
  annotations:
    linkerd.io/inject: enabled
spec:
  volumes:
  - name: shared-data
    emptyDir: {}
  containers:
  - name: client
    image: curlimages/curl
    command:
      - "sh"
      - "-c"
      - >
        while true; do
          sleep 3600;
        done
  serviceAccountName: client
  nodeSelector:
    kubernetes.io/os: linux
