linkerd-and-windows/linux-server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: win-demo
  name: linux-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
      os: linux
  template:
    metadata:
      labels:
        app: server
        os: linux
      annotations:
        linkerd.io/inject: enabled
    spec:
      nodeSelector:
        kubernetes.io/os: linux
      serviceAccountName: linux-server
      containers:
        - name: legacy-app
          image: buoyantio/bb:v0.0.5
          command: [ "sh", "-c"]
          args:
          - "/out/bb terminus --h1-server-port 80 --response-text hello-from-linux --fire-and-forget"
          ports:
            - name: http-port
              containerPort: 80
