linkerd-and-windows/windows-server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: windows-server
  namespace: win-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
      os: windows
  template:
    metadata:
      labels:
        app: server
        os: windows
      annotations:
        config.linkerd.io/proxy-image: ghcr.io/buoyantio/proxy-win
        linkerd.io/inject: windows
    spec:
      serviceAccountName: windows-server
      nodeSelector:
        kubernetes.io/os: windows
      containers:
        - name: windowswebserver
          image: mcr.microsoft.com/windows-cssc/python:3.9-nanoserver-ltsc2022
          imagePullPolicy: IfNotPresent
          command:
            - python
            - -u
            - -c
            - |
              [...]
